# mg

./: .gitignore  README.md  agent.py  cache.py  directories.py  fields.py  main.py  model .py  models.py  orchestrator.py  pyproject.toml  rules.md  runner.py  schemas.py  singleton.py  tasks.py  test.py  tools.py  utils.py
.claude/: settings.json
templates/: index.html
tools/: crop_tool.py
