[project]
name = "test-claiudesdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.109.1",
    "claude-agent-sdk>=0.2.87",
    "fastapi>=0.136.3",
    "ipdb>=0.13.13",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pillow>=12.2.0",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
]
